@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.852 2007/04/16 16:12:19 ghen Exp $
+$NetBSD: CHANGES-2007,v 1.853 2007/04/16 18:42:48 abs Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -1656,3 +1656,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated sysutils/bacula-gnome-console to 2.0.3 [ghen 2007-04-16]
 	Updated sysutils/bacula-tray-monitor to 2.0.3 [ghen 2007-04-16]
 	Updated sysutils/bacula-wx-console to 2.0.3 [ghen 2007-04-16]
+	Updated pkgtools/pkg_chk to 1.85 [abs 2007-04-16]
